# swagger.yaml
@@ -86,6 +86,24 @@ paths:
               schema:
                 type: string
                 format: binary
+  /articlesForLieferant:
+    get:
+      summary: return a list of articles of lieferant x ordered ascending but most recent price
+      parameters:
+        - in: query
+          name: x
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Purchase'
 components:
   schemas:
     Purchase:
